[package]
name = "tg_osint_v0"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "io-std"] }
sqlite = "0.37"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Telegram user client
grammers-client = "0.8"
grammers-session = "0.8"
grammers-mtsender = "0.8"
